Fix an overflow issue

--- a/public/_dev/css/components/project.scss
+++ b/public/_dev/css/components/project.scss
@@ -1,6 +1,9 @@
 .projects{
     padding-top: $large-spacing;
     padding-bottom: $large-spacing;
+    .row{
+        overflow-x: hidden;
+    }
     background-color: $primary;
     .project-container{
         height: 332px;
